--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -92,6 +92,12 @@ body,
                 {% else%}
                 <li><a href="{{url_for('main.tasks')}}">学习计划</a></li>
                 {% endif %}
+                <!-- movie -->
+                {% if flag == 6 %}
+                <li class="active"><a href="{{url_for('main.movies')}}">电影</a></li>
+                {% else%}
+                <li><a href="{{url_for('main.movies')}}">电影</a></li>
+                {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
